--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -10,6 +10,7 @@
         width: 24%;
         border-radius: 50%;
     }
+    font-family: 'Press Start 2P', cursive;
     h1{
         padding-top: 0.9rem;
     }
