--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -19,3 +19,13 @@ button{
         color: rgb(230, 225, 225);
     }
 }
+
+@media screen and (max-width: 768px) {
+    nav{
+        button{
+            z-index: 10;
+        }
+        font-size: 2vh;
+    }
+    
+}
