--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -49,3 +49,12 @@ input[type="range"]::-webkit-slider-thumb{
 .track{
     width:100%;
 }
+
+@media screen and (max-width: 768px) {
+    .time-control{
+        width: 90%;
+    }
+    .play-control{
+        width: 50%;
+    }
+}
