--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -15,3 +15,12 @@
         padding-top: 0.9rem;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .song-container{
+        img{
+            width: 60%;
+        }
+    }
+    
+}
